tests/NormalTests/paczka1/fuzzy1/38142373.err
Error in line 1: eC0b0M S497 9,5
Error in line 10: eC0b0M A731 66,2
Error in line 16: iNff A177 80,2
Error in line 25: Xz441hvt A731 1,4
Error in line 28: Xz441hvt S497 88,6
